# litentry-node

./: .editorconfig  .gitattributes  .gitignore  .rustfmt.toml  .travis.yml  Cargo.toml  Makefile  README.md  cargoconfig.example  docker-compose.yml  litentry.json
.git-crypt/keys/default/0/: 7447F1AB5A5688074853F3E3ED778D7375EA72E5.gpg  7ACB049E2EC6236A37419D9A634DF68C8F462CBD.gpg
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build_test.yml  integration-test-response.yml  rust.yml  update_pallets.yml
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/account-linker/: Cargo.toml
pallets/account-linker/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  util.rs  util_btc.rs  util_eth.rs  utils.rs  weights.rs
pallets/account-linker/src/btc/: base58.rs  legacy.rs  mod.rs  witness.rs
pallets/account-linker/src/tests/: btc.rs  eth.rs
pallets/offchain-worker/: Cargo.toml
pallets/offchain-worker/src/: benchmarking.rs  lib.rs  test_data.md  tests.rs  urls.rs  utils.rs  weights.rs
resources/: accounts.md  litentry-rostock.json  litentry-ss58.json  litentry.json
runtime/: Cargo.toml
runtime/src/: lib.rs
scripts/: check-rust-env.sh  export_spec.sh  init.sh  insert_ocw_key.sh  start-devnet.sh  start-testnet.sh
scripts/testnet/: benchmark.md  insert-key.sh  node01-aura.json  node02-aura.json
server/: Cargo.toml
server/src/: main.rs
testnet/: benchmark.md  insert-key.sh  litentry.json  node01-gran.json  node01-insert-aura.json  node01-insert-gran.json  node02-gran.json  node02-insert-aura.json  node02-insert-gran.json  start-node01.sh  start-node02.sh  start-nodes.sh  testnet-accounts.md  testnet.md
token-server/: .env.example
token-server/src/: main.rs
ts-tests/: package-lock.json  package.json
ts-tests/tests/: test-eth-balance.ts  utils.ts
