[package]
authors = ['Litentry Dev']
build = 'build.rs'
description = 'A fresh FRAME-based Substrate node, ready for hacking.'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'litentry-node'
repository = 'https://github.com/litentry/litentry-node'
version = '0.0.1'

[[bin]]
name = 'litentry-node'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-build-script-utils = {default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master", version = '3.0.0'}

[dependencies]
jsonrpc-core = '15.0.0'
structopt = '0.3.8'
hex-literal = "0.3.1"
# local dependencies
litentry-runtime = { path = '../runtime', version = '0.0.1' }

# Substrate dependencies
frame-benchmarking = {default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master", version = '3.0.0'}
frame-benchmarking-cli = {default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master", version = '3.0.0'}
pallet-transaction-payment-rpc = {default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master", version = '3.0.0'}
sc-basic-authorship = {default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master", version = '0.9.0'}
sc-cli = {default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master", features = ['wasmtime'], version = '0.9.0'}
sc-client-api = {default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master", version = '3.0.0'}
sc-consensus = {default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master", version = '0.9.0'}
sc-consensus-aura = {default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master", version = '0.9.0'}
sc-executor = {default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master",features = ['wasmtime'],  version = '0.9.0'}
sc-finality-grandpa = {default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master", version = '0.9.0'}
sc-rpc = {default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master", version = '3.0.0'}
sc-rpc-api = {default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master", version = '0.9.0'}
sc-keystore = {default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master", version = '3.0.0'}
sc-service = {default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master", features = ['wasmtime'], version = '0.9.0'}
sc-transaction-pool = {default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master", version = '3.0.0'}
sp-api = {default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master", version = '3.0.0'}
sp-block-builder = {default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master", version = '3.0.0'}
sp-blockchain = {default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master", version = '3.0.0'}
sp-consensus = {default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master", version = '0.9.0'}
sp-consensus-aura = {default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master", version = '0.9.0'}
sp-core = {default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master", version = '3.0.0'}
sp-finality-grandpa = {default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master", version = '3.0.0'}
sp-inherents = {default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master", version = '3.0.0'}
sp-runtime = {default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master", version = '3.0.0'}
sp-transaction-pool = {default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master", version = '3.0.0'}
substrate-frame-rpc-system = {default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master", version = '3.0.0'}

[features]
default = []
runtime-benchmarks = ['litentry-runtime/runtime-benchmarks']
