[package]
authors = ['Litentry Dev']
edition = '2018'
homepage = 'https://litentry.com'
license = 'Unlicense'
name = 'litentry-runtime'
repository = 'https://github.com/litentry/litentry-node/'
version = '0.0.1'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-wasm-builder = '4.0.0'

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.2.0'

[dependencies]
hex-literal = {optional = true, version = '0.3.1'}
serde = {features = ['derive'], optional = true, version = '1.0.119'}

# local dependencies
pallet-account-linker = {git = "https://github.com/litentry/litentry-pallets", package = "pallet-account-linker", default-features = false, branch = "stable"}
pallet-identity = {git = 'https://github.com/litentry/litentry-pallets', package = 'pallet-identity', default-features = false, branch = 'stable'}
pallet-offchain-worker = {git = "https://github.com/litentry/litentry-pallets", package = "pallet-offchain-worker", default-features = false, branch = "stable"}
pallet-teerex = {git = "https://github.com/litentry/pallet-teerex.git", package = "pallet-teerex", default-features = false, branch = "litentry"}

# Substrate dependencies
frame-benchmarking = {default-features = false, git = "https://github.com/paritytech/substrate.git", optional = true, tag = 'v3.0.0'}
frame-executive = {default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'v3.0.0'}
frame-support = {default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'v3.0.0'}
frame-system = {default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'v3.0.0'}
frame-system-benchmarking = {default-features = false, git = "https://github.com/paritytech/substrate.git", optional = true, tag = 'v3.0.0'}
frame-system-rpc-runtime-api = {default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'v3.0.0'}
pallet-aura = {default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'v3.0.0'}
pallet-balances = {default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'v3.0.0'}
pallet-collective = {default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'v3.0.0'}
pallet-democracy = {default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0"}
pallet-grandpa = {default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'v3.0.0'}
pallet-proxy = {default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'v3.0.0'}
pallet-randomness-collective-flip = {default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'v3.0.0'}
pallet-recovery = {default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'v3.0.0'}
pallet-scheduler = {default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'v3.0.0'}
pallet-sudo = {default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'v3.0.0'}
pallet-timestamp = {default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'v3.0.0'}
pallet-transaction-payment = {default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'v3.0.0'}
pallet-transaction-payment-rpc-runtime-api = {default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'v3.0.0'}
pallet-treasury = {default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'v3.0.0'}
sp-api = {default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'v3.0.0'}
sp-block-builder = {default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'v3.0.0'}
sp-consensus-aura = {default-features = false, version = '0.9.0'}
sp-core = {default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'v3.0.0'}
sp-inherents = {default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'v3.0.0'}
sp-offchain = {default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'v3.0.0'}
sp-runtime = {default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'v3.0.0'}
sp-session = {default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'v3.0.0'}
sp-std = {default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'v3.0.0'}
sp-transaction-pool = {default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'v3.0.0'}
sp-version = {default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'v3.0.0'}

[features]
default = ['std']
runtime-benchmarks = [
  'hex-literal',
  'frame-benchmarking',
  'frame-support/runtime-benchmarks',
  'frame-system-benchmarking',
  'frame-system/runtime-benchmarks',
  'pallet-balances/runtime-benchmarks',
  'pallet-timestamp/runtime-benchmarks',
  'pallet-account-linker/runtime-benchmarks',
  'pallet-identity/runtime-benchmarks',
  'pallet-offchain-worker/runtime-benchmarks',
  'sp-runtime/runtime-benchmarks',
]
std = [
  'codec/std',
  'serde',
  'frame-executive/std',
  'frame-support/std',
  'frame-system/std',
  'frame-system-rpc-runtime-api/std',
  'pallet-account-linker/std',
  'pallet-aura/std',
  'pallet-balances/std',
  'pallet-collective/std',
  'pallet-democracy/std',
  'pallet-grandpa/std',
  'pallet-identity/std',
  'pallet-offchain-worker/std',
  'pallet-randomness-collective-flip/std',
  'pallet-proxy/std',
  'pallet-recovery/std',
  "pallet-scheduler/std",
  'pallet-sudo/std',
  'pallet-timestamp/std',
  'pallet-transaction-payment/std',
  'pallet-transaction-payment-rpc-runtime-api/std',
  'pallet-treasury/std',
  'sp-api/std',
  'sp-block-builder/std',
  'sp-consensus-aura/std',
  'sp-core/std',
  'sp-inherents/std',
  'sp-offchain/std',
  'sp-runtime/std',
  'sp-session/std',
  'sp-std/std',
  'sp-transaction-pool/std',
  'sp-version/std',
]
