[package]
authors = ['Litentry Dev']
description = 'FRAME pallet template for defining custom runtime logic.'
edition = '2018'
homepage = 'https://litentry.com'
license = 'Unlicense'
name = 'pallet-account-linker'
repository = 'https://github.com/litentry/litentry-node'
version = '0.0.1'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies]
frame-support = { default-features = false, version = '3.0.0' }
frame-system = { default-features = false, version = '3.0.0' }
sp-io = { default-features = false, version = '3.0.0' }
sp-std = { default-features = false, version = '3.0.0' }
sha2 = { default-features = false, version = "0.9.2" }
ripemd160 = {default-features = false, version = "0.9.1" }
sp-runtime = { default-features = false, version = '3.0.0', optional = true }
frame-benchmarking = {default-features = false, version = '3.0.0', optional = true }
sp-core = {default-features = false,  version = '3.0.0', optional = true }

[dev-dependencies]
sp-core = { default-features = false, version = '3.0.0'}
sp-runtime = { default-features = false, version = '3.0.0' }
parity-crypto = {version = "0.4.0", features = ["publickey"] }
bitcoin = { version = "0.25.2", features = ["rand"] }
serde = { version = "1.0.119" }
hex = "0.4.2"
frame-benchmarking = {version = '3.0.0' }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    "sp-io/std",
    "sp-std/std",
    "sha2/std",
    "ripemd160/std",
    "frame-benchmarking/std",
]
runtime-benchmarks = ["sp-runtime", "frame-benchmarking", "sp-core"]