[package]
authors = ['Junius Zhou <junius@litentry.com>']
description = 'FRAME pallet template for defining custom runtime logic.'
edition = '2018'
homepage = 'https://litentry.com'
license = 'Unlicense'
name = 'pallet-offchain-worker'
repository = 'https://github.com/litentry/litentry-node'
version = '2.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false }
serde = { version = "1.0.101", optional = true }
sp-core = { version = "2.0.0", default-features = false }
# sp-keystore = { version = "0.8.0", default-features = false, optional = true }
sp-io = { version = "2.0.0", default-features = false }
sp-std = { version = "2.0.0", default-features = false }
lite-json = { version = "0.1.3", default-features = false }
parking_lot = "0.10.0"
sp-runtime = { default-features = false, version = '2.0.0' }
frame-support = { default-features = false, version = '2.0.0' }
frame-system = { default-features = false, version = '2.0.0' }
sp-arithmetic = { default-features = false, version = "2.0.0" }
account-linker = {path = "../account-linker", package = "pallet-account-linker", default-features = false}
[dev-dependencies]
sp-core = { default-features = false, version = '2.0.0' }
sp-io = { default-features = false, version = '2.0.0' }
sp-runtime = { default-features = false, version = '2.0.0' }


[features]
default = ['std']
std = [
    "codec/std",
	"frame-support/std",
	"frame-system/std",
	"serde",
	"lite-json/std",
	"sp-core/std",
	"sp-io/std",
	# "sp-keystore",
	"sp-runtime/std",
	"sp-std/std",
	"account-linker/std",
]
